# bol-bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
bol_bot/: __init__.py  config.py  logging_setup.py  main.py  storage.py
bol_bot/bot/: __init__.py  access.py  admin.py  format_vision.py  handlers.py
bol_bot/core/: __init__.py  pdf_engine.py  vision_engine.py
bol_bot/locales/: __init__.py
bol_bot/utils/: __init__.py  datetime_utils.py  document_scanner.py  timezone_utils.py
docs/: ARCHITECTURE.md  DEPLOY_RENDER.md
tests/: conftest.py  test_datetime_utils.py  test_format_vision.py  test_storage.py  test_timezone_utils.py
