[project]
name = "bol-bot"
version = "2.0.0"
description = "Production-grade BOL (Bill of Lading) pickup time editor Telegram bot"
requires-python = ">=3.10"
dependencies = [
    "python-telegram-bot==21.4",
    "PyMuPDF==1.27.2",
    "pillow>=10.0",
    "pytesseract>=0.3.10",
    "anthropic>=0.39.0",
    "opencv-python-headless>=4.9.0",
    "numpy>=1.26",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "python-dotenv>=1.0",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.5",
    "mypy>=1.10",
    "freezegun>=1.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true
